--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "description": "Repositorio de cuestionarios interactivos para el cumplimiento de la Ley N° 21.719 de Protección de Datos Personales en Chile",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
