--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "lucide-react": "^0.294.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.1",
-    "lucide-react": "^0.294.0"
+    "react-router-dom": "^6.20.1"
   },
   "devDependencies": {
+    "@types/node": "^24.0.3",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
